<resources>
    <string name="app_name">交子金服</string>
    <string name="load_error">加载失败</string>
    <string name="loading">加载中.....</string>
    <string name="load_failed">加载失败</string>
    <string name="login_phone">手机验证码登录</string>
    <string name="login_username">账号密码登录</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_yours_phone">请输入您的手机号</string>
    <string name="please_input_img_it_code">请输入图像验证码</string>
    <string name="please_input_message_it_code">请输入短信验证码</string>
    <string name="login_get_it_code_text">获取验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="face_login">人脸识别登录</string>
    <string name="choice_identity">选择身份登录</string>
    <string name="complete">完成</string>
    <string name="register_content">还没有注册账号？</string>
    <string name="login_register">立即注册</string>
    <string name="register">注册</string>
    <string name="login_quick">快速登录</string>
    <string name="user_info_auth">用户信息认证</string>
    <string name="gp_home">首页</string>
    <string name="gp_product">发现</string>
    <string name="gp_manage">管理</string>
    <string name="gp_mine">我的</string>

    <string name="high_project">优质项目</string>
    <string name="high_customer">优质客户</string>
    <string name="home_activity">推荐活动</string>
    <string name="news_info">新闻资讯</string>
    <string name="newest">最新</string>
    <string name="completion_degree">完成度</string>
    <string name="amount">金额</string>
    <string name="annualized">年化</string>
    <string name="sign_out">退出</string>
    <string name="total_investment">投资总额</string>
    <string name="investment_projects_number">投资项目次数</string>
    <string name="investment_funds_number">投资基金次数</string>
    <string name="funds_manage">基金管理</string>
    <string name="lp_manage">LP管理</string>
    <string name="annual_income">年化收益</string>
    <string name="share_company_number">参股公司数</string>
    <string name="contributive_lp_Number">出资LP数</string>
    <string name="contribution_amount">出资额</string>
    <string name="headline">头条</string>
    <string name="release_fund">发布基金</string>
    <string name="username_and_password">账号密码</string>
    <string name="selected_user">选择角色</string>
    <string name="additional_information">补充信息</string>
    <string name="terms_of_service">服务条款</string>
    <string name="next_step">下一步</string>
    <string name="please_selected_user">请滑动身份卡选择您的身份</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="already_invested_funds">已投基金</string>
    <string name="investment_fund">投资中基金</string>
    <string name="already_invested_project">已投项目</string>
    <string name="investment_project">投资中项目</string>
    <string name="image">图片</string>
    <string name="all_image">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="done">完成</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="delete">删除</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="undo">撤消</string>
    <string name="fund_intro">基金简介</string>
    <string name="more">更多</string>
    <string name="please_input_email">请输入您的邮箱</string>
    <string name="please_input_username">请输入账号</string>
    <string name="please_input_card">请输入身份证号码</string>
    <string name="fine_selectfund">精选基金</string>
    <string name="fund_size">基金规模</string>
    <string name="amount_invested">可投金额</string>
    <string name="no_more_data">已无更多数据</string>

    <string name="thousand">万</string>
    <string name="billion">亿</string>
    <string name="business_summary">经营总结</string>
    <string name="face_scan">人脸识别</string>
    <string name="file_list">文件列表</string>
    <string name="file_manager">文件管理</string>
    <string name="fund_manager">基金管理</string>
    <string name="todo_event">代办事项</string>
    <string name="common_auth_info_content">认证后享有更多权限</string>
    <string name="no_data">暂无数据</string>

    <string name="earnings_valuation">盈利及估值情况</string>
    <string name="financial_statistics">财务统计</string>
    <string name="industry_statistics">行业统计</string>
    <string name="addAssets_statistics">增元统计</string>
    
    <string name="unit_ming">名</string>
    <string name="unit_zhi">支</string>
    <string name="unit_ci">次</string>
    <string name="manage_project">项目管理</string>
    <string name="history_lp">历史投资LP:</string>
    <string name="history_financing">历史融资次数:</string>
    <string name="history_fund">历史投资基金数:</string>
    <string name="history_amount">历史融资总额:</string>
    <string name="project_financing_situation">项目融资情况</string>
    <string name="business_report">经营报表</string>
    <string name="todo_list">待办事项</string>
    <string name="related_documents">相关文件</string>
    <string name="no_complete">未完成</string>
    <string name="completed">已完成</string>
    <string name="cumulative_investment_amount">累计投资金额</string>
    <string name="gp_count">入驻GP数量</string>
    <string name="enterprises_count">入驻企业数量</string>
    <string name="lp_count">入驻投资人</string>
    <string name="authenticated">已认证</string>
    <string name="step_one">第一步</string>
    <string name="send_code">发送验证码</string>
    <string name="step_two">第二步</string>
    <string name="reset_send_code">重发验证码</string>
    <string name="step_three">第三步</string>
    <string name="please_set_password">请设置密码</string>

    <string name="no_permission_tip">该用户暂无权限进行此操作</string>

</resources>
