<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <www.mrray.cn.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="忘记密码"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:src="@mipmap/forget_password_one"
        android:paddingTop="38dp"
        android:paddingBottom="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/step_one"
        android:layout_width="wrap_content"
        android:textColor="@color/text_color"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="16dp"
        android:textColor="@color/text_color"
        android:text="@string/please_input_yours_phone"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/forget_password_phone"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/forget_one_edit_bg"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/send_code"
        android:background="@drawable/button_background"
        android:layout_height="40dp"
        android:text="@string/send_code"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"/>
</LinearLayout>