<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listview_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <www.mrray.cn.view.ConditionFilterView
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="@dimen/filter_height"
            android:layout_weight="3"
            app:condition_one="@string/total_investment"
            app:condition_two="@string/investment_projects_number"
            app:condition_three="@string/investment_funds_number"
            app:default_selected= "0"
            >
        </www.mrray.cn.view.ConditionFilterView>

        <TextView
            android:id="@+id/more_filter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/filter_height"
            android:gravity="center"
            android:visibility="gone"
            android:text="筛选"
            ></TextView>
    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/widget_5"
        android:layout_below="@+id/ll_filter"
        >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </android.support.v7.widget.RecyclerView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <include layout="@layout/drawerlayout_gp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/widget_5"
        android:visibility="gone"
        android:layout_below="@+id/ll_filter"></include>

</RelativeLayout>