<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <www.mrray.cn.view.TitleBar
        app:title_text="忘记密码"
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"/>
    <ImageView
        android:paddingTop="38dp"
        android:paddingBottom="45dp"
        android:src="@mipmap/forge_password_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/step_two"
        android:layout_width="wrap_content"
        android:textColor="@color/text_color"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="16dp"
        android:textColor="@color/text_color"
        android:text="@string/please_input_message_it_code"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

    <com.jyn.vcview.VerificationCodeView
        android:id="@+id/verificationcodeview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal"
        app:vcv_et_inputType="number"
        app:vcv_et_number="6"
        app:vcv_et_text_color="@android:color/black"
        app:vcv_et_text_size="6sp" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:text="验证码已经发送至手机：182999877788"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/reset_send_code"
        android:layout_marginRight="25dp"
        android:layout_gravity="right"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
</LinearLayout>