<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/icon_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:background="@mipmap/app_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/login_phone_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:button="@null"
            android:checked="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login_phone"
            android:textColor="@color/login_checkbox_btn_color"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/login_username_btn"
            app:layout_constraintTop_toBottomOf="@+id/icon_logo" />

        <View
            android:id="@+id/login_left_divider"
            android:layout_width="0dp"
            android:layout_height="1.3dp"
            android:layout_marginTop="10dp"
            android:background="#d3b06d"
            app:layout_constraintLeft_toLeftOf="@+id/login_phone_btn"
            app:layout_constraintRight_toRightOf="@+id/login_phone_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_phone_btn" />

        <View
            android:id="@+id/login_right_divider"
            android:layout_width="0dp"
            android:layout_height="1.3dp"
            android:layout_marginTop="10dp"
            android:background="#d3b06d"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/login_username_btn"
            app:layout_constraintRight_toRightOf="@+id/login_username_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_phone_btn" />

        <CheckBox
            android:id="@+id/login_username_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:button="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login_username"
            android:textColor="@color/login_checkbox_btn_color"
            app:layout_constraintLeft_toRightOf="@+id/login_phone_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_logo" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/login_phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/login_input_background"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@+id/login_phone_btn">

            <include
                layout="@layout/layout_login_phone"
                tools:ignore="MissingConstraints" />
            <!--账号密码登录-->
            <include
                layout="@layout/layout_login_username"
                tools:ignore="MissingConstraints" />
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_phone_container" />

        <TextView
            android:id="@+id/login_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/face_login"
            android:textColor="#b6b6b6"
            android:textSize="@dimen/text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:visibility="gone"
            android:text="@string/forget_password"
            android:textColor="#b6b6b6"
            android:textSize="@dimen/text_size"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <View
            android:id="@+id/login_quick_divider"
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="#d3d3d5"
            app:layout_constraintBottom_toBottomOf="@+id/login_quick_login_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_quick_login_txt" />

        <TextView
            android:visibility="gone"
            android:id="@+id/login_quick_login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login_quick"
            android:textColor="#c8c8c8"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/qq"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_wechat"
            app:layout_constraintTop_toBottomOf="@+id/login_quick_login_txt"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/login_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@mipmap/wechat"
            app:layout_constraintLeft_toRightOf="@+id/login_qq"
            app:layout_constraintRight_toLeftOf="@id/login_weibo"
            app:layout_constraintTop_toBottomOf="@+id/login_quick_login_txt"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/login_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@mipmap/weibo"
            app:layout_constraintLeft_toRightOf="@+id/login_wechat"
            app:layout_constraintRight_toLeftOf="@+id/login_alipay"
            app:layout_constraintTop_toBottomOf="@+id/login_quick_login_txt"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/login_alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:background="@mipmap/alipay"
            app:layout_constraintLeft_toRightOf="@id/login_weibo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_quick_login_txt"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/login_register_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="25dp"
            android:text="@string/register_content"
            android:textColor="#b6b6b6"
            android:textSize="@dimen/text_size_small"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/login_register_btn"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/login_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="25dp"
            android:text="@string/login_register"
            android:textColor="#d3b06d"
            android:textSize="@dimen/text_size_small"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
